--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <div class="header">
         <div class="white"><strong>Position</strong></div>
         <div class="white headthree">
-            <div>Home</div>
-            <div>About</div>
-            <div>Services</div>
+            <div class="home">Home</div>
+            <div class="red">About</div>
+            <div class="red">Services</div>
         </div>
         <div class="button">
             <button class="login">Login</button>
             <button class="login">SignUp</button>
         </div>
+    </div>
+    <div class="para ">
+        <p><strong>P</strong>OSITION<strong> E</strong>LEMENTS<STRONG> U</STRONG>SING<STRONG> F</STRONG>LOATS</p>
     </div>
     <div class="float">
         <div class="first">
@@ -41,6 +44,7 @@
             <div class="C">sidekick</div>
         </div>
     </div>
+    <div class="para2"><p><strong> U</strong>NIQUELY<STRONG> P</STRONG>OSITIONING<STRONG> C</STRONG>ONTENT</p></div>
     <div class="flex">
       <div class="flexbox1">
         <div class="box firsta color ">sidekick</div>
@@ -63,15 +67,68 @@
         <div class="box firsta2" id="SS">sidekick</div>
          <p id="SS">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi fugit, quis quisquam a commodi, debitis, voluptatibus soluta asperiores aspernatur odit nisi! Pariatur quod quis natus, molestiae esse fugiat corporis!</p>
     </div>
+    <div class="para3"><p><strong> P</strong>OSITIONING<strong> W</strong>ITH<STRONG> F</STRONG>LEXT</p></div>
     <div class="last">
         <div class="sumoffour">
-            <div class="item">Item1</div>
-            <div class="item">Item2</div>
-            <div class="item">Item3</div>
-            <div class="item">Item4</div>
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item">Item 3</div>
+            <div class="item">Item 4</div>
         </div>
         <div class="line"></div>
+        <div class="eight">
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item">Item 3</div>
+            <div class="item">Item 4</div>
+            <div class="item">Item 5</div>
+            <div class="item">Item 6</div>
+            <div class="item">Item 7</div>
+            <div class="item">Item 8</div>
+        </div>
+        <div class="eight">
+            <div class="item">Item 9</div>
+            <div class="item">Item 10</div>
+            <div class="item">Item 11</div>
+            <div class="item">Item 12</div>
+            <div class="item">Item 13</div>
+            <div class="item">Item 14</div>
+            <div class="item">Item 15</div>
+            <div class="item">Item 16</div>
+        </div>
+        <div class="eight">
+            <div class="item">Item 17</div>
+            <div class="item">Item 18</div>
+            <div class="item">Item 19</div>
+            <div class="item">Item 20</div>
+            <div class="item">Item 21</div>
+            <div class="item">Item 22</div>
+        </div>
+        <div class="line"></div>
+        <div class="eight">
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item itemthree">Item 3</div>
+            <div class="item">Item 4</div>
+            <div class="item">Item 5</div>
+        </div>
+        <div class="line"></div>
+        <div class="eight">
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item">Item 3</div>
+            <div class="item">Item 4</div>
+            <div class="item">Item 5</div>
+            <div class="item">Item 6</div>
+        </div>
     </div>
+    <footer>
+        <ul>
+          <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+          <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+          <li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+        </ul>
+      </footer>
    
    
 </body>
